--- a/bower.json
+++ b/bower.json
@@ -5,12 +5,12 @@
     "ZURB <foundation@zurb.com>"
   ],
   "description": "Basic template for a new Foundation for Sites project.",
-  "main": "index.html",
+  "main": "gulpfile.js",
   "license": "MIT",
   "homepage": "http://foundation.zurb.com",
   "dependencies": {
-    "foundation-sites": "~6.0.0",
-    "motion-ui": "~1.1.0"
+    "foundation-sites": "~6.2.0",
+    "motion-ui": "~1.2.0"
   },
   "ignore": [
     "**/.*",
