--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "version" : "0.0.1",
   "require" : {
     "php" : "^5.5 || ^7.0",
-    "composer/installers" : "~1.0"
+    "composer/installers" : "~1.0",
+    "zurb/foundation" : "dev-master"
   },
   "license" : "BSD-3-Clause",
   "keywords" : [ "foundation", "theme", "zendframework2" ],
