--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "foundation-sites-template",
+  "name": "foundation-ssg",
   "version": "0.0.1",
+  "main": "gulpfile.js",
   "devDependencies": {
     "node-sass": "~0.7.0",
     "grunt": "~0.4.1",
@@ -24,17 +25,28 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.2.0",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-sass": "^2.1.0"
+    "gulp-sass": "^2.1.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-extname": "^0.2.0",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.2.0",
+    "gulp-uncss": "^1.0.1",
+    "browser-sync": "^2.10.0",
+    "panini": "^1.0.0",
+    "rimraf": "^2.4.3",
+    "run-sequence": "^1.1.0",
+    "style-sherpa": "^1.0.0",
+    "yargs": "^3.8.0"
   },
   "scripts": {
     "start": "gulp",
-    "build": "gulp sass"
+    "build": "gulp build --production"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zurb/foundation-sites-template.git"
-  },
-  "dependencies": {
-    "highlight.js": "~7.5.0"
+    "url": "https://github.com/zurb/foundation-zurb-template.git"
   }
 }
