--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require" : {
     "php" : "^5.5 || ^7.0",
     "composer/installers" : "~1.0",
-    "zurb/foundation" : "dev-master"
+    "zurb/foundation" : "^6.1.0"
   },
   "license" : "BSD-3-Clause",
   "keywords" : [ "foundation", "theme", "zendframework2" ],
